--- a/src/main/resources/templates/base/equipment/search.html
+++ b/src/main/resources/templates/base/equipment/search.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="utf-8">
@@ -104,7 +104,6 @@
                           <option>音频处理器</option>
                           <option>功放设备</option>
                           <option>3D系统</option>
-                          <option>D系统</option>
                         </select>
                       </div>
                     </div>
@@ -177,8 +176,8 @@
             <table id="example1" class="table table-bordered table-striped">
               <thead>
               <tr>
-                <th>设备ID</th>
-                <th>种类</th>
+                <th>序号</th>
+                <th>设备类型</th>
                 <th>规格/类型</th>
                 <th>品牌</th>
                 <th>系列</th>
@@ -201,30 +200,30 @@
               <tr>
                 <td >1</td>
                 <td >放映机</td>
-                <td >科视</td>
                 <td >科视 Christie</td>
+                <td >氙灯</td>
+                <td >2K,2系列</td>
                 <td >CP2215</td>
-                <td >DLP数字电影机</td>
                 <th><a href="/base/equipment/details">详情</a></th>
                 <th><a href="https://www.christiedigital.com/zh-cn/cinema/cinema-products/digital-cinema-projectors/Christie-CP2215-DLP-Digital-Cinema-Projector">官网详情</a></th>
               </tr>
               <tr>
                 <td >2</td>
                 <td >放映机</td>
-                <td >科视</td>
                 <td >科视 Christie</td>
+                <td >氙灯</td>
+                <td >2K,2系列</td>
                 <td >CP2220</td>
-                <td >DLP数字电影机</td>
                 <th><a href="/base/equipment/details">详情</a></th>
                 <th><a href="https://www.christiedigital.com/zh-cn/cinema/cinema-products/digital-cinema-projectors/christie-CP2220-DLP-Digital-Cinema-Projector">官方详情</a></th>
               </tr>
               <tr>
                 <td >3</td>
                 <td >放映机</td>
-                <td >科视</td>
                 <td >科视 Christie</td>
+                <td >氙灯</td>
+                <td >2K,2系列</td>
                 <td >CP2230</td>
-                <td >DLP数字电影机</td>
                 <th><a href="/base/equipment/details">详情</a></th>
 
                 <th><a href="https://www.christiedigital.com/zh-cn/cinema/cinema-products/digital-cinema-projectors/christie-CP2230-DLP-Digital-Cinema-Projector">官网详情</a></th>
@@ -232,20 +231,20 @@
               <tr>
                 <td >4</td>
                 <td >放映机</td>
-                <td >科视</td>
                 <td >科视 Christie</td>
+                <td >氙灯</td>
+                <td >4K,2系列</td>
                 <td >CP4220</td>
-                <td >DLP数字电影机</td>
                 <th><a href="/base/equipment/details">详情</a></th>
                 <th><a href="https://www.christiedigital.com/zh-cn/cinema/cinema-products/digital-cinema-projectors/christie-CP4220-DLP-Digital-Cinema-Projector">官网详情</a></th>
               </tr>
               <tr>
                 <td >5</td>
                 <td >放映机</td>
-                <td >Barco</td>
-                <td >Barco Alchemy</td>
+                <td >巴可 Barco</td>
+                <td >氙灯</td>
+                <td >C系列</td>
                 <td >DP2K-20C</td>
-                <td >小型DLP Cinema投影仪（18500）</td>
                 <th><a href="/base/equipment/details">详情</a></th>
 
                 <th><a href="https://www.barco.com.cn/zh-CN/product/dp2k-20c#specs">官网详情</a></th>
@@ -253,30 +252,30 @@
               <tr>
                 <td >6</td>
                 <td >放映机</td>
-                <td >Barco</td>
-                <td >Barco Alchemy</td>
+                <td >巴可 Barco</td>
+                <td >氙灯</td>
+                <td >B系列</td>
                 <td >DP2K-23B</td>
-                <td >高亮度DLP Cinema投影仪（24500流明）</td>
                 <th><a href="/base/equipment/details">详情</a></th>
                 <th><a href="https://www.barco.com.cn/zh-CN/product/dp2k-23b">官网详情</a></th>
               </tr>
               <tr>
                 <td >7</td>
                 <td >放映机</td>
-                <td >Barco</td>
-                <td >Barco Alchemy</td>
+                <td >巴可 Barco</td>
+                <td >氙灯</td>
+                <td >B系列</td>
                 <td >DP2K-23B</td>
-                <td >小型DLP Cinema投影仪（6000流明）</td>
                 <th><a href="/base/equipment/details">详情</a></th>
                 <th><a href="https://www.barco.com.cn/zh-CN/product/dp2k-8s">官网详情</a></th>
               </tr>
               <tr>
                 <td >8</td>
                 <td >放映机</td>
-                <td >Barco</td>
-                <td >Barco Alchemy</td>
+                <td >巴可 Barco</td>
+                <td >氙灯</td>
+                <td >S系列</td>
                 <td >DP2K-10S</td>
-                <td >小型DLP Cinema投影仪（9000流明）</td>
                 <th><a href="/base/equipment/details">详情</a></th>
                 <th><a href="https://www.barco.com.cn/zh-CN/product/dp2k-10s">官网详情</a></th>
               </tr>
