--- a/src/main/resources/templates/documents/operate_details.html
+++ b/src/main/resources/templates/documents/operate_details.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="utf-8">
@@ -93,7 +93,7 @@
               <div class="row">
                 <div class="col-12">
                   <h4>
-                    <small class="float-left">放映机 设备维护教程</small>
+                    <small class="float-left">投影灯盖板拆卸教程</small>
                     <small class="float-right">更新时间: 2/8/2019</small>
                   </h4>
                 </div>
@@ -103,9 +103,9 @@
               <!-- info row -->
               <div class="row invoice-info">
                 <div class="col-sm-2 invoice-col">
-                  <strong>设备品牌及类型：</strong>
+                  <strong>适用设备类型：</strong>
                 
-                    <br> BARCO DP2K <br>
+                    <br> 放映机 <br>
                   <address>
                   </address>
 				  
@@ -113,14 +113,14 @@
                 <!-- /.col -->
                 <div class="col-sm-2 invoice-col">
                   <address>
-					<strong>支持的设备型号：</strong>
-                    <br>DP2K SLP LLP<br>
+					<strong>适用设备品牌：</strong>
+                    <br>巴可 BARCO<br>
                   </address>
                 </div>
                 <div class="col-sm-2 invoice-col">
                   <address>
-                    <strong>建议维护周期：</strong>
-                    <br>6个月<br>
+                    <strong>适用设备型号：</strong>
+                    <br>DP2K-20C<br>
                   </address>
                 </div>
                 <!-- /.col -->
@@ -144,19 +144,19 @@
                     <tbody>
                     <tr>
                       <td>步骤一</td>
-                      <td>检查灯箱安装，并重置灯箱</td>
+                      <td>准备一字螺丝刀</td>
                     </tr>
                     <tr>
                       <td>步骤二</td>
-                      <td>选择匹配灯箱</td>
+                      <td>逆时针松开投影灯盖板右上方和右下方的两颗螺钉</td>
                     </tr>
                     <tr>
                       <td>步骤三</td>
-                      <td>见5180</td>
+                      <td>依次轻轻拉出投影灯盖板的左上角和左下角</td>
                     </tr>
                     <tr>
                       <td>步骤四</td>
-                      <td>检查灯箱前端蓝色插头是否损坏</td>
+                      <td>取下盖板并妥善放置</td>
                     </tr>
                     </tbody>
                   </table>
@@ -165,7 +165,7 @@
                     </div>
 				  </div>
 				  <div class="col-6 table-responsive">
-                    <video style="height: 340px; width: 617px;" autoplay="autoplay" controls="controls" th:src="@{/video/abc.mov}">
+                    <video style="height: 400px; width: 600px;" autoplay="autoplay" controls="controls" th:src="http://218.241.227.185/mserver/player/?url=%2Fvod%2Fvod%2Fvx41gl30%2Findex.m3u8" >
                       <span>&nbsp;</span>
                     </video>
                   </div>
