--- a/src/main/resources/templates/assets/details_room.html
+++ b/src/main/resources/templates/assets/details_room.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="utf-8">
@@ -197,7 +197,7 @@
               <div class="row">
                 <div class="col-12">
                   <h4>
-                    <i class="fa fa-globe"></i> 北京XXX影院 第XXX放映厅
+                    <i class="fa fa-globe"></i> 中影国际影城(欢乐海岸店) 第1放映厅
                     <small class="float-right">更新时间: 2/8/2019</small>
                   </h4>
                 </div>
@@ -210,10 +210,10 @@
                     <address>
                       <br/>
                       <strong>省市区: </strong>
-                      <br>北京市 朝阳区<br>
+                      <br>广东省 深圳市 南山区<br>
                       <br/>
                       <strong>详细地址: </strong>
-                      <br>北京市 朝阳区 平乐园100号<br>
+                      <br>深圳市南山区白石路东8号欢乐海岸曲水湾2栋A区<br>
                     </address>
                     <address>
                       &nbsp;
@@ -225,42 +225,21 @@
                       <div class="col-sm-6 invoice-col">
                         <address>
                           <strong>影院经理：</strong><br>
-                          张三<br>
-                          联系电话: (555) 539-1037<br>
+                          张先生<br>
+                          联系电话: 13332193517<br>
                           电子邮箱: john.doe@example.com
                         </address>
                       </div>
                       <!-- /.col -->
                       <div class="col-sm-6 invoice-col">
                         <address>
-                          <strong>放映主管：</strong><br>
-                          李四<br>
-                          联系电话: 13000000000<br>
+                          <strong>技术主管：</strong><br>
+                          刘先生<br>
+                          联系电话: 13823913241<br>
                           电子邮箱: tom.doe@example.com
                         </address>
                       </div>
-                      <!-- /.col -->
-                    </div>
-                    <div class="col-sm-12 row">
-                      <!-- /.col -->
-                      <div class="col-sm-6 invoice-col">
-                        <address>
-                          <strong>影院经理：</strong><br>
-                          张三<br>
-                          联系电话: (555) 539-1037<br>
-                          电子邮箱: john.doe@example.com
-                        </address>
-                      </div>
-                      <!-- /.col -->
-                      <div class="col-sm-6 invoice-col">
-                        <address>
-                          <strong>放映主管：</strong><br>
-                          李四<br>
-                          联系电话: 13000000000<br>
-                          电子邮箱: tom.doe@example.com
-                        </address>
-                      </div>
-                      <!-- /.col -->
+
                     </div>
                   </div>
                 </div>
