--- a/src/main/resources/templates/documents/standard.html
+++ b/src/main/resources/templates/documents/standard.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="utf-8">
@@ -107,7 +107,7 @@
                       </div>
                     </div>
                     <div class="col-4">
-                      <label>标准对象</label>
+                      <label>适用对象</label>
                       <div class="form-group">
                         <!--<label>Select</label>-->
                         <select class="form-control">
