modified front pages

--- a/src/main/resources/templates/assets/details_room.html
+++ b/src/main/resources/templates/assets/details_room.html
@@ -246,7 +246,7 @@
                 <div class="col-sm-6">
                   <div class="row">
                     <div class="col-sm-6">
-                      <h5>北京XXXX影院 第 2 影厅 布局平面图</h5>
+                      <h5>中影国际影城(欢乐海岸店) 第1放映厅 布局平面图</h5>
                     </div>
                     <img class="img-fluid" alt="photo" width="55%" th:src="@{/dist/img/WechatIMG269.jpeg}">
 <!--                    <div id="father">-->
