--- a/src/main/resources/templates/system/api.html
+++ b/src/main/resources/templates/system/api.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="utf-8">
@@ -113,6 +113,7 @@
           <table id="example1" class="table table-bordered table-striped">
             <thead>
             <tr>
+              <th>序号</th>
               <th>接口名称</th>
               <th>接口地址</th>
               <th >配置</th>
@@ -120,6 +121,7 @@
             </thead>
             <tbody>
             <tr>
+              <td>1</td>
               <td>影院监管平台接口</td>
               <td>http:// 111.207.30.7:8080</td>
               <td >
@@ -127,6 +129,7 @@
               </td>
             </tr>
             <tr>
+              <td>2</td>
               <td>流媒体服务器接口</td>
               <td>http://192.168.1.210:80</td>
               <td >
